fixed z-index of header

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -14,6 +14,7 @@
   justify-content: left;
   align-items: center;
   padding-left: 25px;
+  z-index: 6;
 }
 
 .header .leftSide img {
